Fix about section header icon vertical alignment

--- a/src/components/home/about_section.module.css
+++ b/src/components/home/about_section.module.css
@@ -32,6 +32,7 @@
 
 .header {
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -76,8 +77,8 @@
   }
 
   .headerIcon {
-    max-width: 98px;
-    max-height: 96px;
+    width: 98px;
+    height: 96px;
   }
 
   .story {
